name:                abide
version:             0.1.0.0
synopsis:            ABI parameter passing abstraction
license:             BSD3
license-file:        LICENSE
author:              Karl Smeltzer
maintainer:          karl@galois.com
copyright:           Galois Inc. (c) 2018
homepage:            https://github.com/GaloisInc/abide                     
category:            Data
build-type:          Simple
extra-source-files:  ChangeLog.md
data-files:          fst-files/*.fst.txt
cabal-version:       >=1.10
description:
  This package abstracts (some) different parameter-passing rules.  These vary
  by both architecture and ABI and are often complex.


library
  exposed-modules:     Abide.ABI.SystemV
                     , Abide.Compute
                     , Abide.CTypes
                     , Abide.Generate
                     , Abide.Parse
                     , Abide.Parse.ABI
                     , Abide.Parse.Arch
                     , Abide.Parse.Common
                     , Abide.Types
                     , Abide.Types.ABI.SystemV
                     , Abide.Types.Arch.PPC32
                     , Abide.Types.Arch.PPC64
                     , Abide.Types.Arch.X86_64
  build-depends:       base >=4.10 && <4.13
                     , bytestring ==0.10.*
                     , comonad ==5.*
                     , containers ==0.5.*
                     , file-embed >=0.0.10 && <0.1
                     , filepath ==1.*
                     , lens ==4.*
                     , megaparsec ==7.*
                     , parameterized-utils ==1.*
                     , parser-combinators ==1.*
                     , text ==1.*
                     , tuple ==0.3.*
                     , universe ==1.*
  hs-source-dirs:      src
  default-language:    Haskell2010

executable abide
  main-is:             Main.hs
  other-modules:       Abide.ABI.SystemV
                     , Abide.CTypes
                     , Abide.Generate
                     , Abide.Parse
                     , Abide.Parse.ABI
                     , Abide.Parse.Arch                     
                     , Abide.Parse.Common
                     , Abide.Types
                     , Abide.Types.ABI.SystemV
                     , Abide.Types.Arch.PPC32
                     , Abide.Types.Arch.PPC64
                     , Abide.Types.Arch.X86_64
  build-depends:       base >=4.10 && <4.13
                     , bytestring ==0.10.*
                     , comonad ==5.*
                     , containers ==0.5.*
                     , file-embed >=0.0.10 && <0.1
                     , filepath ==1.*
                     , lens ==4.*
                     , megaparsec ==7.*
                     , parameterized-utils ==1.*                     
                     , parser-combinators ==1.*
                     , text ==1.*
                     , tuple ==0.3.*
                     , universe ==1.*
  hs-source-dirs:      src
  default-language:    Haskell2010


test-suite test-abide
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             TestAbide.hs
  other-modules:       TestGenerator
                     , TestParams
                     , TestParser
                     , TestTypes
  build-depends:       base <5
                     , abide
                     , containers ==0.5.*
                     , hspec ==2.*
                     , language-c-quote >=0.12 && <1.0
                     , mainland-pretty >= 0.6 && <1.0
                     , megaparsec ==7.*
                     , parser-combinators ==1.*
                     , text ==1.*
                     , process ==1.*
  default-language:    Haskell2010
